add cargo installation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,10 @@ name = "yee"
 version = "0.1.0"
 authors = ["Sarp Basaraner <sarpbasaraner@gmail.com>"]
 
+description = "A cross-platform, command line Yeelight client."
+repository = "https://github.com/sgbasaraner/yeelight-cli.git"
+keywords = ["yeelight", "cli"]
+license = "MIT"
+
 [dependencies]
 prettytable-rs = "^0.6"
